--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,20 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+#jenkins中用到的变量
+#默认是false，studio中使用本地配置签名路径
+IS_JENKINS=false
+#配置类型，在jenkins上可以配置选择，用此变量来动态打出对应BuildType的包
+BUILD_TYPE=debug
+#本地key路径
+DemoAPP_KEY_STORE=D:/keystore/
+#签名的别名
+DemoAPP_ALAIS=helloworld
+#签名的密码
+DemoAPP_PSW=helloworld
+#密码
+DemoAPP_STORE_PSW=helloworldtest
+#jenkins上使用的签名路径，我这里放在app工程目录下，实际使用可放在对应服务器上某个路径
+DemoAPP_KEYSTORE=D:/keystore/
